Corrected unit tests